prop route load flicker fix. No animation.

--- a/trs-gatsby/src/components/layout.css
+++ b/trs-gatsby/src/components/layout.css
@@ -13,3 +13,28 @@ img {
 .ReactModal__Body--open {
   overflow-y: hidden;
 }
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 0ms ease-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
+}
+
+.ReactModal__Content {
+  transform: translateY(50px);
+  transition: transform 0ms ease-out;
+}
+
+.ReactModal__Content--after-open {
+  transform: translateY(0);
+}
+
+.ReactModal__Content--before-close {
+  transform: translateY(50px);
+}
